--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="./index.html" frameborder="1" width="300px" height="500px"></iframe>
+    <iframe src="./Handson 1/" frameborder="1" width="300px" height="500px"></iframe>
     <a href="thor.mp4"> Click here to see the video</a>
 </body>
 </html>
