--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title> Handson 3</title>
     </head>
     <body>
-        <iframe src="./Handson 1/index.html"> </iframe>
+        <iframe src="./index1.html"> </iframe>
             <br><br>
-            <a href="./index1.html"> Click Here to see Video </a>
+            <a href="./index3.html"> Click Here to see Video </a>
         
         </body>
 </html>
