--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title> Video</title>
-    </head>
-    <body>
-<video width="400" height="400" controls autoplay muted> Click here to see video
-    <source src="./thor.mp4" type="Video/mp4">
-</video>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Handson-1</title>
+</head>
+<body>
+    <h1>Practice 1</h1>
+    <hr>
+    <a href="https://www.prepbytes.com/" target="_blank">Link to website open in a new tab</a><br><br>
+    <a href="https://www.prepbytes.com/">Link to website open in a same tab</a><br><br>
+    <a href="./index1.html">Link to Internal file</a>
+
+
+    <h3>Image kept inside the Folder</h3>
+    <img src="great-cormorant-7536603__340.jpg" alt="img" width="200px"><br>
+    <h3>Uploaded image</h3>
+    <img src="rose-165819__340.jpg" alt="img" width="200px"><br><br>
+    <h2>lists</h2>
+    <a href="./index2.html">Click here</a>
+    
+    
 </body>
 </html>
